--- a/index.html
+++ b/index.html
@@ -59,10 +59,11 @@
       }
       #error-box-stack {
         color: #666;
+        max-width: 100%;
+        overflow-y: auto;
       }
       #error-box-title,
-      #error-box-description,
-      #error-box-stack {
+      #error-box-description {
         display: flex;
         flex-direction: column;
         justify-content: center;
