--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
         justify-content: center;
         align-items: center;
       }
+      .grecaptcha-badge {
+        visibility: hidden;
+      }
     </style>
   </head>
   <body>
