--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         margin: 0;
         width: 100%;
         height: 100%;
+        overscroll-behavior-y: none;
       }
       #error-box {
         position: fixed;
