--- a/index.html
+++ b/index.html
@@ -17,61 +17,15 @@
         height: 100%;
         overscroll-behavior-y: none;
       }
-      #error-box {
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        z-index: 1000;
-        background-color: #f0f0f0;
-        overflow: auto;
-      }
-      #error-box-content {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        gap: 30px;
-        width: 100%;
-        height: 100%;
-        min-height: fit-content;
-        overflow-y: auto;
-      }
-      #error-box h2 {
-        margin: 0;
-      }
-      #error-box-title {
-        color: red;
-      }
-      #error-box-stack {
-        color: #666;
-        max-width: 100%;
-        overflow-y: auto;
-      }
-      #error-box-title,
-      #error-box-description {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-      }
-      #error-box-title {
-        gap: 2px;
-      }
-      #error-box-description {
-        gap: 8px;
-      }
       .grecaptcha-badge {
         visibility: hidden;
       }
     </style>
   </head>
   <body>
-    <div id="error-box" style="display: none">
-      <div id="error-box-content">
-        <div id="error-box-title">
+    <div id="error-box" class="error-box" style="display: none">
+      <div class="error-box-content">
+        <div class="error-box-title">
           <h2 lang="en">ERROR</h2>
           <h2 lang="fr">ERREUR</h2>
           <h2 lang="de">FEHLER</h2>
@@ -81,7 +35,7 @@
           <h2 lang="ja">エラー</h2>
           <h2 lang="ko">오류</h2>
         </div>
-        <div id="error-box-description">
+        <div class="error-box-description">
           <div lang="en">Something went wrong. Please check your network connection.</div>
           <div lang="fr">Un problème est survenu. Veuillez vérifier votre connexion réseau.</div>
           <div lang="de">Es ist ein Problem aufgetreten. Bitte überprüfen Sie Ihre Netzwerkverbindung.</div>
@@ -91,8 +45,11 @@
           <div lang="ja">問題が発生しました。ネットワーク接続を確認してください。</div>
           <div lang="ko">문제가 발생했습니다. 네트워크 연결을 확인하세요.</div>
         </div>
-        <pre id="error-box-stack"></pre>
+        <pre id="error-box-stack" class="error-box-stack"></pre>
       </div>
+    </div>
+    <div id="loading-view-overlay" class="loading-view-overlay" role="status" aria-live="polite">
+      <div class="loading-view-spinner" aria-hidden="true"></div>
     </div>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
